Added Entry for Galaxy Note 2

--- a/nethunter-installer/devices.cfg
+++ b/nethunter-installer/devices.cfg
@@ -239,6 +239,13 @@ version = "7.1.1"
 kernelstring = "NetHunter idleKernel kdi"
 devicenames = hltexx hltekdi SCL22
 
+# Galaxy Note 2
+[t00lte]
+author = "snazzysanoj"
+version = "7.1.1"
+kernelstring = "NetHunter idleKernel t00"
+devicenames = t00lte
+
 # Galaxy S5 for Cyanogenmod (GSM)
 [klte]
 author = "jcadduono"
